[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triage_env"
version = "1.0.0"
description = "A production-grade OpenEnv environment simulating a real-world emergency room triage using the Emergency Severity Index (ESI)."
authors = [
  { name = "Ujjwal Shreshtha" },
  { name = "Kumar Amityush" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai",
    "typing-extensions",
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["triage_env", "server", "tasks"]
